Fix naming for task 18 and add footer align for task 17

--- a/CSS_advanced/styles/17-style.css
+++ b/CSS_advanced/styles/17-style.css
@@ -74,6 +74,7 @@ a:active {
 }
 .section-footer {
   padding: var(--section-footer-padding);
+  text-align: var(--section-footer-align);
 }
 .section-title {
   font-family: var(--font-family-title);
